<resources>
    <string name="app_name">Quiz Application</string>
    <string name="register">Register</string>
    <string name="quiz_description">This quiz will test basic knowledge about Android. You can retake the quiz as many times as you want.</string>
    <string name="start_quiz_description">Click the following button to start the quiz.</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="total_questions">Total Questions :</string>
    <string name="correct_answers">Correct Answers(Score) :</string>
    <string name="wrong_answers">Wrong Answers :</string>
    <string name="score">Your Score is :</string>
    <string name="terms"><![CDATA[" The R&A - Working for Golf      Home     The R&A         About The R&A         Initiatives         Golf Development         Playing Golf         Distance Insights     Rules     Championships     HERITAGE     WAGR®     SUSTAINABILITY     Shop  2018 Rules Quiz Terms and Conditions      The 2018 Rules Quiz is organised by R&A Rules Limited, LGU House, The Scores, St Andrews, Fife KY16 9AT (\"The R&A\").     The 2018 Rules Quiz is open to everyone, anywhere in the world other than employees of The R&A and their immediate families.     By entering the Rules Quiz each entrant agrees to be bound by these terms and conditions.     To enter the 2018 Rules Quiz you must:         complete the 18 questions; and         provide your name and email address on the online registration form.     On submission of your completed entry:         you consent to your email address being added to The R&A database and periodically will be sent newsletters from The R&A. For the avoidance of doubt, your email address will not be displayed or used for any other purpose; and         you will be automatically bound by these terms and conditions.     Entry into the 2018 Rules Quiz is free.     All entries must be received by 11:59pm (GMT) on 25th February 2018. Entries not submitted in accordance with these terms and conditions will not be accepted.     Entries that are incomplete or corrupted will be deemed invalid. No responsibility will be accepted by The R&A for corrupted entries.     The first prize for the 2018 Rules Quiz is two Season Tickets to the 2018 Open Championship at Carnoustie. No cash alternative will be offered or change given.     To be eligible to receive the first prize, entrants must achieve a score of 18 / 18 in the 2018 Rules Quiz. In the event that two or more entrants tie for the first prize for the 2018 Rules Quiz, those entrants will be entered into a draw. The winner will be the first entry drawn at random by an authorised representative of The R&A.     Except for the winner, all entrants to the 2018 Rules Quiz will be entered into a prize draw and the first 10 names drawn will receive R&A prizes, including Rules and Open Championship publications.     The R&A prizes cannot be redeemed for cash or benefits in kind such as gift vouchers. The prizes are non-transferable.     In the unlikely event that no entries are received before the closing date the prizes will not be awarded.     The winner of the 2018 Rules Quiz will be notified by email after the closing date. The winner will be asked to provide the names and details of the individuals who will use the 2018 Open Championship Tickets and must do so within 14 days of being notified or they will forfeit the prize.  One of the named individuals must be the prize winner, unless otherwise authorised by The R&A.  The Tickets will then be personal to those named individuals and they will not be transferable.     Prizes will be despatched by post. The R&A accepts no liability for lost or undelivered prizes.     To the fullest extent permitted by law, The R&A hereby excludes all warranties, representations, covenants and liability (whether express or implied) regarding the prize or a prize draw.     In the event of any dispute regarding the 2018 Rules Quiz, the decision of The R&A shall be final and binding and no correspondence or discussion shall be entered into.     At any time prior to the closing date, The R&A may withdraw or cancel the 2018 Rules Quiz for any reason and may change the prize to a prize of a similar value. Any such cancellation or change shall be notified on The R&A’s website.     The R&A reserves the right to cancel the Rules Quiz and reject redemption of any R&A Prizes if it reasonably believes that the Rules Quiz or any prize is being used unlawfully or illegally.     By entering the 2018 Rules Quiz, the winner consents to the publishing of their name and country of residence on The R&A website.     The R&A reserves the right to amend these terms and conditions without prior notice. Any changes will be posted on The R&A’s website located at https://www.randa.org.     By submitting the completed registration form to enter the draw you consent to the storage, use and transfer of your personal data by The R&A for marketing and related purposes.     The competition and these terms and conditions will be governed by the law of Scotland and all and any questions or disputes will be subject to the exclusive jurisdiction of the Scottish courts.  Sitemap      Contact Us Disclaimer R&A Trademarks Cookie Info Privacy Policy Recruitment Participant Privacy Policy Modern Slavery Statement Pension Scheme - Chairman's Annual Governance Statement Pension Scheme - Statement of Investment Principles Pension Scheme - Engagement Policy Implementation Statement EPIS   © R&A Championships Limited, Company No. SC247047, R&A Rules Limited, Company No. SC247046 R&A Group Services Limited, Company No. SC247048, Beach House, Golf Place, St Andrews, Fife KY16 9JA "]]></string>
    <string name="accept">Accept</string>
    <string name="question">Question</string>
    <string name="analysis">Result analysis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="c">C#</string>
    <string name="kotlin">Kotlin</string>
    <string name="database">Database</string>
    <string name="home">Home</string>

</resources>