<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".HomeFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textFontWeight="16"
            android:text="@string/quiz_description"/>

        <Space
            android:layout_width="1dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textFontWeight="16"
            android:text="@string/start_quiz_description"/>
        <Button
            android:id="@+id/start_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/start_quiz"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>